--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
 
-        <meta property="og:image" content="#.jpg">
+        <meta property="og:image" content="https://nb991.github.io/Isolo_Store.net/OG_image.jpg">
         <title> Isolo Store </title>
         <meta name="description" content="متجر الكتروني لشحن الالعاب الاونلاين و بيع و شراء حسابات ببجي">
-        <link rel="icon" type="image/png" href="#.png">
+        <link rel="icon" type="image/png" href="https://nb991.github.io/Isolo_Store.net/ICON_image.png">
         <link rel="stylesheet" href="style-one.css">
 
     </head>
