--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 
             <footer>
                 &copy; 2024 جميع الحقوق محفوظه - Isolo Store
+                <br> تم تصميم هذا الموقع عن طريق <a href="https://nb991.github.io/Omar.dev/"> المطور| عمر ماهر </a>
             </footer>
         </div>
 
